tests/misc_tests/misc_ui_tests/polymatch_semantic-err.stderr
error[E0592]: duplicate definitions with name `foo`
 --> tests/misc_tests/misc_ui_tests/polymatch_semantic-err.rs:7:17
  |
7 |                 fn foo() {}
  |                 ^^^^^^^^
  |                 |
  |                 duplicate definitions for `foo`
  |                 other definition for `foo`

error[E0004]: non-exhaustive patterns: `i32::MIN..=199_i32`, `201_i32..=299_i32` and `301_i32..=i32::MAX` not covered
 --> tests/misc_tests/misc_ui_tests/polymatch_semantic-err.rs:4:26
  |
4 |     typewit::polymatch! {100;
  |                          ^^^ patterns `i32::MIN..=199_i32`, `201_i32..=299_i32` and `301_i32..=i32::MAX` not covered
  |
  = note: the matched value is of type `i32`
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern, a match arm with multiple or-patterns as shown, or multiple match arms
 --> src/macros/polymatch.rs
  |
  |             (($($pattern)+) => $expr, i32::MIN..=199_i32 | 201_i32..=299_i32 | 301_i32..=i32::MAX => todo!())
  |                                     ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
